--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -53,4 +53,5 @@
             </div>
         </div>
     </nav>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zIq0xI0ogxk?si=Gij1aUcHifORJay1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 {% endblock %}
